--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-567.4KB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
-  - {name: 🇭🇰 香港-4.22MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇺🇸 美国-376.5KB/s(Youtube:不良林), server: 20.239.176.94, port: 443, type: vmess, uuid: 4adf9138-5aca-4a26-b217-335e72bb680d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.239.176.94}}
-  - {name: 🇺🇸 美国-3.18MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-4.48MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.33MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20060, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.86MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-4.43MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇫🇷 法国-1.29MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-4.14MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.57MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.04MB/s(Youtube:不良林), server: 203.138.98.199, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
   - {name: 🇨🇳 中国-8.46MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
   - {name: 🇨🇳 中国-7.78MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
   - {name: 🇻🇳 越南-7.99MB/s(Youtube:不良林), server: 103.173.255.228, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.48MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-5.75MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-567.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-376.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.86MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.43MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.78MB/s(Youtube:不良林)
       - 🇻🇳 越南-7.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-567.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-376.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.86MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.43MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.78MB/s(Youtube:不良林)
       - 🇻🇳 越南-7.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-567.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-376.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.86MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.43MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.78MB/s(Youtube:不良林)
       - 🇻🇳 越南-7.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-4.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.43MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-567.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-376.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.86MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.43MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.78MB/s(Youtube:不良林)
       - 🇻🇳 越南-7.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-567.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-376.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.86MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.43MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.78MB/s(Youtube:不良林)
       - 🇻🇳 越南-7.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-567.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-376.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.86MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.43MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.78MB/s(Youtube:不良林)
       - 🇻🇳 越南-7.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-567.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-376.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.86MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.43MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.78MB/s(Youtube:不良林)
       - 🇻🇳 越南-7.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
