--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇩🇪 德国-405.6KB/s(Youtube:不良林), server: 80.78.132.177, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-4.04MB/s(Youtube:不良林), server: 43.129.30.122, port: 15256, type: vmess, uuid: 02ee559e-a1aa-427e-e42b-f97977795dbc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-7.99MB/s(Youtube:不良林), server: 103.173.255.228, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.10MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.50MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
   - {name: 🇸🇬 新加坡-567.4KB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
-  - {name: 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇺🇸 美国-4.04MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.40MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.53MB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.23MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.70MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
   - {name: 🇰🇷 韩国-2.10MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇨🇳 中国-654.9KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇬🇧 英国-1.75MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-405.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.04MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.10MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-567.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.70MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.10MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-654.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇩🇪 德国-405.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.04MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.10MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-567.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.70MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.10MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-654.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-405.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.04MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.10MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-567.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.70MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.10MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-654.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-4.04MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇩🇪 德国-405.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.04MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.10MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-567.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.70MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.10MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-654.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇩🇪 德国-405.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.04MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.10MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-567.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.70MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.10MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-654.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-405.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.04MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.10MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-567.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.70MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.10MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-654.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-405.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.04MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.10MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-567.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.70MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.10MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.95MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-654.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
